# simple-game-engine-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: colour_cycle.rs  colour_cycle.rs~  hello_world.rs  moving_circle.rs  moving_rect.rs
src/: canvas.rs  engine.rs  keyboard.rs  lib.rs
src/engine/: fps.rs  mod.rs
src/input/: button.rs  keyboard.rs  mod.rs  mouse.rs  state.rs
